Søknad og godkjenning: alle kan søke om å selge kokebøker
Bytter invitasjonsmodellen (app.skapere) med et åpent søknadsløp. Alle kan
lage en kokebok, sette egen pris og sende den inn; MatMinne godkjenner pris
og innhold før den kan selges.

Samling.erPublisert erstattes av SamlingStatus: UTKAST → TIL_GODKJENNING →
GODKJENT/AVSLATT. Bare GODKJENT låser innhold og kan kjøpes, så en oppskrift
i et utkast er fortsatt åpen for alle. Avslag lagrer begrunnelse som skaperen
ser og kan rette etter. Endrer skaperen prisen på en godkjent kokebok, går den
tilbake i kø — det er prisen som er godkjent, ikke bare kokeboka.

Eksisterende rader migreres: er_publisert=true blir GODKJENT, resten UTKAST.

Nytt:
- /skaper er åpent for alle, med vilkårene og 20 %-kuttet i søknadsskjemaet
- /admin/kokeboker + /admin/kokeboker/{id} for behandling, gated på app.admin,
  med prisfordelingen (kjøper betaler / til skaper / til MatMinne) synlig
- /kokeboker som markedsplass, sorterbar på nyest, mest solgt og lavest pris
- "Selg i kokebok" på egen oppskrift, som var inngangen som manglet — den
  lager utkast ved behov og legger oppskriften rett inn
- Kokebøker til salgs i profilmenyen, og godkjenningskø med teller for admin

ADMIN_EPOST erstatter SKAPERE som miljøvariabel.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>