@@ -3,6 +3,8 @@ package com.example.matminne.controller;
 import com.example.matminne.model.Bruker;
 import com.example.matminne.model.Oppskrift;
 import com.example.matminne.model.Samling;
+import com.example.matminne.model.SamlingOppskrift;
+import com.example.matminne.model.SamlingStatus;
 import com.example.matminne.repository.*;
 import com.example.matminne.service.AiOppskriftService;
 import com.example.matminne.service.BrukerService;
@@ -22,6 +24,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
@@ -36,7 +39,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 @SpringBootTest
 @ActiveProfiles("test")
 @TestPropertySource(properties = {
-        "app.skapere=skaper@test.no",
+        "app.admin=admin@test.no",
         "app.plattform.andel=20"
 })
 class BetaltSamlingIntegrationTest {
@@ -99,7 +102,7 @@ class BetaltSamlingIntegrationTest {
         s.setNavn("Mine beste middager");
         s.setBeskrivelse("20 oppskrifter");
         s.setPris(14900);
-        s.setErPublisert(true);
+        s.setStatus(SamlingStatus.GODKJENT);
         return s;
     }
 
@@ -244,9 +247,9 @@ class BetaltSamlingIntegrationTest {
     }
 
     @Test
-    void salgsside_upublisert_erSkjultForAndre() throws Exception {
+    void salgsside_ikkeGodkjent_erSkjultForAndre() throws Exception {
         Samling utkast = betaltSamling();
-        utkast.setErPublisert(false);
+        utkast.setStatus(SamlingStatus.UTKAST);
         when(samlingRepository.findById(SAMLING_ID)).thenReturn(Optional.of(utkast));
         Bruker kjoper = bruker(KJOPER_ID, "kjoper@test.no");
         when(brukerService.finnVedEpost("kjoper@test.no")).thenReturn(kjoper);
@@ -255,47 +258,245 @@ class BetaltSamlingIntegrationTest {
                 .andExpect(status().is3xxRedirection());
     }
 
-    // ── SKAPERSTUDIO ──────────────────────────────────────────────
+    @Test
+    void oppskriftErIkkeLast_forUtkast() throws Exception {
+        // Bare GODKJENTE kokebøker låser innhold — repoet filtrerer på status
+        when(samlingRepository.finnBetalteSomInneholder(OPPSKRIFT_ID))
+                .thenReturn(Collections.emptyList());
+        when(oppskriftRepository.findById(OPPSKRIFT_ID)).thenReturn(Optional.of(laastOppskrift()));
+        when(likeRepository.countByOppskriftId(anyLong())).thenReturn(0L);
+        when(kommentarRepository.findByOppskriftIdOrderByOpprettetAsc(anyLong()))
+                .thenReturn(Collections.emptyList());
+        when(ratingRepository.snitRatingForOppskrift(anyLong())).thenReturn(0.0);
+        when(ratingRepository.countByOppskriftId(anyLong())).thenReturn(0L);
+        Bruker kjoper = bruker(KJOPER_ID, "kjoper@test.no");
+        when(brukerService.finnVedEpost("kjoper@test.no")).thenReturn(kjoper);
+
+        mockMvc.perform(get("/detaljer/" + OPPSKRIFT_ID).with(somBruker("kjoper@test.no")))
+                .andExpect(status().isOk())
+                .andExpect(model().attribute("erLast", false))
+                .andExpect(content().string(org.hamcrest.Matchers.containsString("Stek kjøttdeigen")));
+    }
+
+    // ── SKAPERSTUDIO: ÅPENT FOR ALLE ──────────────────────────────
 
     @Test
-    void skaperstudio_renderer_forInvitertSkaper() throws Exception {
-        when(brukerService.finnVedEpost("skaper@test.no")).thenReturn(skaperKlarTilSalg());
-        when(samlingRepository.finnBetalteAvSkaper(SKAPER_ID)).thenReturn(List.of(betaltSamling()));
-        when(samlingOppskriftRepository.countBySamlingId(SAMLING_ID)).thenReturn(5L);
-        when(kjopRepository.countBySamlingId(SAMLING_ID)).thenReturn(3L);
-        when(kjopRepository.findBySkaperIdOrderByDatoKjoptDesc(SKAPER_ID))
+    void skaperstudio_erApentForAlle() throws Exception {
+        Bruker vanlig = bruker(KJOPER_ID, "kjoper@test.no");
+        when(brukerService.finnVedEpost("kjoper@test.no")).thenReturn(vanlig);
+        when(samlingRepository.finnBetalteAvSkaper(KJOPER_ID)).thenReturn(Collections.emptyList());
+        when(kjopRepository.findBySkaperIdOrderByDatoKjoptDesc(KJOPER_ID))
                 .thenReturn(Collections.emptyList());
+        when(oppskriftRepository.findByBrukerId(KJOPER_ID)).thenReturn(Collections.emptyList());
 
-        mockMvc.perform(get("/skaper").with(somBruker("skaper@test.no")))
+        mockMvc.perform(get("/skaper").with(somBruker("kjoper@test.no")))
                 .andExpect(status().isOk())
-                .andExpect(model().attribute("kanSelge", true))
-                .andExpect(content().string(org.hamcrest.Matchers.containsString("Mine beste middager")));
+                // Vilkårene, inkludert 20 %-kuttet, må stå i søknadsskjemaet
+                .andExpect(content().string(org.hamcrest.Matchers.containsString("20 % av hvert salg")));
     }
 
     @Test
-    void skaperstudio_erStengtForVanligeBrukere() throws Exception {
+    void sendInn_tomKokebok_avvises() throws Exception {
+        when(brukerService.finnVedEpost("skaper@test.no")).thenReturn(skaperKlarTilSalg());
+        Samling utkast = betaltSamling();
+        utkast.setStatus(SamlingStatus.UTKAST);
+        when(samlingRepository.findById(SAMLING_ID)).thenReturn(Optional.of(utkast));
+        when(samlingOppskriftRepository.countBySamlingId(SAMLING_ID)).thenReturn(0L);
+
+        mockMvc.perform(post("/skaper/samling/" + SAMLING_ID + "/send-inn")
+                        .with(somBruker("skaper@test.no")).with(csrf()))
+                .andExpect(redirectedUrl("/skaper/samling/" + SAMLING_ID + "?feil=tom"));
+
+        verify(samlingRepository, never()).save(any(Samling.class));
+    }
+
+    @Test
+    void sendInn_setterStatusTilGodkjenning() throws Exception {
+        when(brukerService.finnVedEpost("skaper@test.no")).thenReturn(skaperKlarTilSalg());
+        Samling utkast = betaltSamling();
+        utkast.setStatus(SamlingStatus.UTKAST);
+        when(samlingRepository.findById(SAMLING_ID)).thenReturn(Optional.of(utkast));
+        when(samlingOppskriftRepository.countBySamlingId(SAMLING_ID)).thenReturn(3L);
+
+        mockMvc.perform(post("/skaper/samling/" + SAMLING_ID + "/send-inn")
+                        .with(somBruker("skaper@test.no")).with(csrf()))
+                .andExpect(redirectedUrl("/skaper/samling/" + SAMLING_ID + "?sendt=true"));
+
+        assertEquals(SamlingStatus.TIL_GODKJENNING, utkast.getStatus());
+    }
+
+    @Test
+    void prisendring_paGodkjentKokebok_kreverNyGodkjenning() throws Exception {
+        when(brukerService.finnVedEpost("skaper@test.no")).thenReturn(skaperKlarTilSalg());
+        Samling godkjent = betaltSamling();                 // GODKJENT, 14900
+        when(samlingRepository.findById(SAMLING_ID)).thenReturn(Optional.of(godkjent));
+
+        mockMvc.perform(post("/skaper/samling/" + SAMLING_ID + "/oppdater")
+                        .param("navn", "Mine beste middager")
+                        .param("prisKroner", "249")
+                        .with(somBruker("skaper@test.no")).with(csrf()))
+                .andExpect(redirectedUrl("/skaper/samling/" + SAMLING_ID + "?ny-pris=true"));
+
+        assertEquals(SamlingStatus.TIL_GODKJENNING, godkjent.getStatus());
+        assertEquals(24900, godkjent.getPris().intValue());
+    }
+
+    // ── ADMIN: GODKJENNING ────────────────────────────────────────
+
+    @Test
+    void godkjenningsko_erStengtForVanligeBrukere() throws Exception {
         Bruker vanlig = bruker(KJOPER_ID, "kjoper@test.no");
         when(brukerService.finnVedEpost("kjoper@test.no")).thenReturn(vanlig);
 
-        mockMvc.perform(get("/skaper").with(somBruker("kjoper@test.no")))
-                .andExpect(status().is3xxRedirection())
+        mockMvc.perform(get("/admin/kokeboker").with(somBruker("kjoper@test.no")))
                 .andExpect(redirectedUrl("/kokebok"));
     }
 
     @Test
-    void publisering_krevesFullfortStripeOppsett() throws Exception {
-        Bruker utenConnect = bruker(SKAPER_ID, "skaper@test.no");   // connectKlar = false
-        when(brukerService.finnVedEpost("skaper@test.no")).thenReturn(utenConnect);
-        Samling utkast = betaltSamling();
-        utkast.setErPublisert(false);
-        when(samlingRepository.findById(SAMLING_ID)).thenReturn(Optional.of(utkast));
+    void godkjenningsko_renderer_forAdmin() throws Exception {
+        Bruker adm = bruker(99L, "admin@test.no");
+        when(brukerService.finnVedEpost("admin@test.no")).thenReturn(adm);
+        Samling venter = betaltSamling();
+        venter.setStatus(SamlingStatus.TIL_GODKJENNING);
+        when(samlingRepository.finnTilGodkjenning()).thenReturn(List.of(venter));
+        when(samlingRepository.finnBehandlede()).thenReturn(Collections.emptyList());
+        when(samlingOppskriftRepository.countBySamlingId(SAMLING_ID)).thenReturn(4L);
+        when(brukerService.findById(SKAPER_ID)).thenReturn(skaperKlarTilSalg());
 
-        mockMvc.perform(post("/skaper/samling/" + SAMLING_ID + "/publiser")
+        mockMvc.perform(get("/admin/kokeboker").with(somBruker("admin@test.no")))
+                .andExpect(status().isOk())
+                .andExpect(content().string(org.hamcrest.Matchers.containsString("Mine beste middager")));
+    }
+
+    @Test
+    void admin_godkjenner_setterStatusGodkjent() throws Exception {
+        Bruker adm = bruker(99L, "admin@test.no");
+        when(brukerService.finnVedEpost("admin@test.no")).thenReturn(adm);
+        Samling venter = betaltSamling();
+        venter.setStatus(SamlingStatus.TIL_GODKJENNING);
+        when(samlingRepository.findById(SAMLING_ID)).thenReturn(Optional.of(venter));
+
+        mockMvc.perform(post("/admin/kokeboker/" + SAMLING_ID + "/godkjenn")
+                        .with(somBruker("admin@test.no")).with(csrf()))
+                .andExpect(redirectedUrl("/admin/kokeboker?godkjent=true"));
+
+        assertEquals(SamlingStatus.GODKJENT, venter.getStatus());
+    }
+
+    @Test
+    void admin_avslar_lagrerBegrunnelse() throws Exception {
+        Bruker adm = bruker(99L, "admin@test.no");
+        when(brukerService.finnVedEpost("admin@test.no")).thenReturn(adm);
+        Samling venter = betaltSamling();
+        venter.setStatus(SamlingStatus.TIL_GODKJENNING);
+        when(samlingRepository.findById(SAMLING_ID)).thenReturn(Optional.of(venter));
+
+        mockMvc.perform(post("/admin/kokeboker/" + SAMLING_ID + "/avsla")
+                        .param("grunn", "For høy pris for tre oppskrifter.")
+                        .with(somBruker("admin@test.no")).with(csrf()))
+                .andExpect(redirectedUrl("/admin/kokeboker?avslatt=true"));
+
+        assertEquals(SamlingStatus.AVSLATT, venter.getStatus());
+        assertEquals("For høy pris for tre oppskrifter.", venter.getAvslagsgrunn());
+    }
+
+    @Test
+    void vanligBruker_kanIkkeGodkjenneEgenKokebok() throws Exception {
+        when(brukerService.finnVedEpost("skaper@test.no")).thenReturn(skaperKlarTilSalg());
+        Samling venter = betaltSamling();
+        venter.setStatus(SamlingStatus.TIL_GODKJENNING);
+        when(samlingRepository.findById(SAMLING_ID)).thenReturn(Optional.of(venter));
+
+        mockMvc.perform(post("/admin/kokeboker/" + SAMLING_ID + "/godkjenn")
                         .with(somBruker("skaper@test.no")).with(csrf()))
-                .andExpect(status().is3xxRedirection())
-                .andExpect(redirectedUrl("/skaper/samling/" + SAMLING_ID + "?feil=ikke-klar"));
+                .andExpect(redirectedUrl("/kokebok"));
 
-        verify(samlingRepository, never()).save(any(Samling.class));
+        assertEquals(SamlingStatus.TIL_GODKJENNING, venter.getStatus());
+    }
+
+    @Test
+    void vurderingsside_renderer_medPrisfordeling() throws Exception {
+        Bruker adm = bruker(99L, "admin@test.no");
+        when(brukerService.finnVedEpost("admin@test.no")).thenReturn(adm);
+        Samling venter = betaltSamling();
+        venter.setStatus(SamlingStatus.TIL_GODKJENNING);
+        when(samlingRepository.findById(SAMLING_ID)).thenReturn(Optional.of(venter));
+        when(brukerService.findById(SKAPER_ID)).thenReturn(skaperKlarTilSalg());
+        when(samlingOppskriftRepository.findBySamlingId(SAMLING_ID))
+                .thenReturn(List.of(new SamlingOppskrift(SAMLING_ID, OPPSKRIFT_ID)));
+        when(oppskriftRepository.findAllById(any())).thenReturn(List.of(laastOppskrift()));
+        when(kjopRepository.countBySamlingId(SAMLING_ID)).thenReturn(0L);
+
+        mockMvc.perform(get("/admin/kokeboker/" + SAMLING_ID).with(somBruker("admin@test.no")))
+                .andExpect(status().isOk())
+                // 149 kr med 20 % gir 119 til skaperen og 30 til MatMinne
+                .andExpect(model().attribute("skaperAndel", 119))
+                .andExpect(model().attribute("dinAndel", 30))
+                .andExpect(content().string(org.hamcrest.Matchers.containsString("Hemmelig lasagne")));
+    }
+
+    // ── SKAPERENS REDIGERINGSSIDE ─────────────────────────────────
+
+    @Test
+    void redigeringsside_renderer_medSendInnKnapp() throws Exception {
+        when(brukerService.finnVedEpost("skaper@test.no")).thenReturn(skaperKlarTilSalg());
+        Samling utkast = betaltSamling();
+        utkast.setStatus(SamlingStatus.UTKAST);
+        when(samlingRepository.findById(SAMLING_ID)).thenReturn(Optional.of(utkast));
+        when(samlingOppskriftRepository.findBySamlingId(SAMLING_ID)).thenReturn(Collections.emptyList());
+        when(oppskriftRepository.findByBrukerId(SKAPER_ID)).thenReturn(List.of(laastOppskrift()));
+        when(kjopRepository.countBySamlingId(SAMLING_ID)).thenReturn(0L);
+
+        mockMvc.perform(get("/skaper/samling/" + SAMLING_ID).with(somBruker("skaper@test.no")))
+                .andExpect(status().isOk())
+                .andExpect(model().attribute("dinAndel", 119))
+                .andExpect(content().string(
+                        org.hamcrest.Matchers.containsString("Send inn til godkjenning")));
+    }
+
+    @Test
+    void redigeringsside_visserAvslagsgrunn() throws Exception {
+        when(brukerService.finnVedEpost("skaper@test.no")).thenReturn(skaperKlarTilSalg());
+        Samling avslatt = betaltSamling();
+        avslatt.setStatus(SamlingStatus.AVSLATT);
+        avslatt.setAvslagsgrunn("For få oppskrifter til den prisen.");
+        when(samlingRepository.findById(SAMLING_ID)).thenReturn(Optional.of(avslatt));
+        when(samlingOppskriftRepository.findBySamlingId(SAMLING_ID)).thenReturn(Collections.emptyList());
+        when(oppskriftRepository.findByBrukerId(SKAPER_ID)).thenReturn(Collections.emptyList());
+        when(kjopRepository.countBySamlingId(SAMLING_ID)).thenReturn(0L);
+
+        mockMvc.perform(get("/skaper/samling/" + SAMLING_ID).with(somBruker("skaper@test.no")))
+                .andExpect(status().isOk())
+                .andExpect(content().string(
+                        org.hamcrest.Matchers.containsString("For få oppskrifter til den prisen.")));
+    }
+
+    @Test
+    void annenBruker_kanIkkeApneMinKokebok() throws Exception {
+        Bruker fremmed = bruker(KJOPER_ID, "kjoper@test.no");
+        when(brukerService.finnVedEpost("kjoper@test.no")).thenReturn(fremmed);
+        when(samlingRepository.findById(SAMLING_ID)).thenReturn(Optional.of(betaltSamling()));
+
+        mockMvc.perform(get("/skaper/samling/" + SAMLING_ID).with(somBruker("kjoper@test.no")))
+                .andExpect(redirectedUrl("/skaper"));
+    }
+
+    // ── MARKEDSPLASS ──────────────────────────────────────────────
+
+    @Test
+    void markedsplass_viserGodkjenteKokeboker() throws Exception {
+        Bruker kjoper = bruker(KJOPER_ID, "kjoper@test.no");
+        when(brukerService.finnVedEpost("kjoper@test.no")).thenReturn(kjoper);
+        when(samlingRepository.finnTilSalgs()).thenReturn(List.of(betaltSamling()));
+        when(brukerService.findById(SKAPER_ID)).thenReturn(skaperKlarTilSalg());
+        when(samlingOppskriftRepository.countBySamlingId(SAMLING_ID)).thenReturn(6L);
+        when(kjopRepository.countBySamlingId(SAMLING_ID)).thenReturn(2L);
+        when(kjopRepository.existsByBrukerIdAndSamlingId(KJOPER_ID, SAMLING_ID)).thenReturn(false);
+
+        mockMvc.perform(get("/kokeboker").with(somBruker("kjoper@test.no")))
+                .andExpect(status().isOk())
+                .andExpect(content().string(org.hamcrest.Matchers.containsString("Mine beste middager")))
+                .andExpect(content().string(org.hamcrest.Matchers.containsString("149 kr")));
     }
 
     // ── MINE KJØP ─────────────────────────────────────────────────
